--- a/UI/src/app/components/console/console.component.html
+++ b/UI/src/app/components/console/console.component.html
@@ -1,6 +1,6 @@
 <div id="console-container" class="console-container">
     <div id="console" #console class="console">
-        <div *ngFor="let line of activeLines; let i = index" appTyping [text]="line" (completed)="onLineCompleted(i)"></div>
-        <div *ngIf="allowUserInput" class="userInput">>{{input}}</div>
+        <ng-template #consoleLines></ng-template>
+        <div *ngIf="allowUserInput" class="userInput">>{{input}}</div> 
     </div>
 </div>
