--- a/UI/src/app/components/resizable-background/resizable-background.component.scss
+++ b/UI/src/app/components/resizable-background/resizable-background.component.scss
@@ -1,12 +1,13 @@
 #background {
-    background-image: url('/assets/images/background.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    top: 0px;
-    left: 0px;
-    position: absolute;
-  }
+  background-color: #000;
+  background-image: url('/assets/images/background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  position: absolute;
+}
   
