--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -4,11 +4,12 @@
   </app-resizable-background>>
 </div>
 <div *ngIf="!isLandscape">
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   <header>
     <div>Welcome to Jim Crockett's Website *</div>
   </header>
   <section>
-
+    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="crockettjim"><a class="LI-simple-link" href='https://www.linkedin.com/in/crockettjim?trk=profile-badge'>LinkedIn</a></div>
   </section>
   <footer>
     <div>* This is written for and better viewed on a landscape device.</div>
