Format alternate view

--- a/UI/src/fonts.scss
+++ b/UI/src/fonts.scss
@@ -9,3 +9,7 @@
     font-family: 'Permanent Marker';
     src: url(assets/fonts/permanent-marker/PermanentMarker-Regular.ttf) format("truetype");
 }
+@font-face {
+    font-family: 'Vollkorn';
+    src: url(assets/fonts/vollkorn/Vollkorn-VariableFont_wght.ttf) format("truetype");
+}
