--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -1,16 +1,8 @@
-<div *ngIf="isLandscape">
+<div *ngIf="(deviceInfo.deviceType === 'desktop' && isLandscape)">
   <app-resizable-background [width]="2172" [height]="1080">
     <app-console left="634" top="507" width="617" height="379"></app-console>
   </app-resizable-background>>
 </div>
-<div *ngIf="!isLandscape">
-  <header>
-    <div>Welcome to Jim Crockett's Website *</div>
-  </header>
-  <section>
-    <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="crockettjim"><a class="LI-simple-link" href='https://www.linkedin.com/in/crockettjim?trk=profile-badge'>LinkedIn</a></div>
-  </section>
-  <footer>
-    <div>* This is written for and better viewed on a landscape device.</div>
-  </footer>
+<div *ngIf="(deviceInfo.deviceType !== 'desktop' || !isLandscape)">
+  <app-alternate-view></app-alternate-view>
 </div>
