Fix urls; add github link to alternate view

--- a/UI/src/app/components/alternate-view/alternate-view.component.html
+++ b/UI/src/app/components/alternate-view/alternate-view.component.html
@@ -8,6 +8,7 @@
     <content>
         <div><a href="https://www.linkedin.com/in/crockettjim">LinkedIn Profile</a></div>
         <div><a href="https://app.pluralsight.com/profile/jim-crockett">Pluralsight Achievements</a></div>
+        <div><a href="https://github.com/CrockettJim/jimcrockett.info">Site's Source Code</a></div>
     </content>
     <footer>
         <div class="disclaimer">This is written for and better viewed on a landscape desktop.</div>
